--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/profile-square-7.webp" alt="Portrait of Alex" class="img-fluid profile-photo">
+              <img src="assets/img/image.png" alt="Portrait of Alex" class="img-fluid profile-photo">
               <figcaption class="profile-caption d-flex justify-content-end">
               </figcaption>
             </figure>
@@ -888,94 +888,34 @@
   </div><!-- End Section Title -->
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
-    <div class="row align-items-stretch">
-      
-      <!-- Contact Form -->
-      <div class="col-lg-7 order-lg-1 order-2" data-aos="fade-right" data-aos-delay="200">
-        <div class="contact-form-container">
-          <div class="form-intro">
-            <h2>Let's Start a Conversation</h2>
-            <p>Whether it's a website, web application, or backend solution, I’m here to discuss your ideas and turn them into reality.</p>
+    <div class="row justify-content-center">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="contact-cards text-center">
+          <div class="row g-3">
+            <div class="col-md-6">
+              <div class="card h-100 shadow-sm">
+                <div class="card-body">
+                  <div class="contact-icon mb-2"><i class="bi bi-envelope fs-3"></i></div>
+                  <h5 class="card-title">Email</h5>
+                  <p class="card-text"><a href="mailto:kiruthickraj28@gmail.com">kiruthickraj28@gmail.com</a></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="card h-100 shadow-sm">
+                <div class="card-body">
+                  <div class="contact-icon mb-2"><i class="bi bi-telephone fs-3"></i></div>
+                  <h5 class="card-title">Phone</h5>
+                  <p class="card-text"><a href="tel:+918124509134">+91 8124509134</a></p>
+                </div>
+              </div>
+            </div>
           </div>
 
-          <form action="forms/contact.php" method="post" class="php-email-form contact-form">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-field">
-                  <input type="text" name="name" class="form-input" id="userName" placeholder="Your Name" required="">
-                  <label for="userName" class="field-label">Name</label>
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <div class="form-field">
-                  <input type="email" class="form-input" name="email" id="userEmail" placeholder="Your Email" required="">
-                  <label for="userEmail" class="field-label">Email</label>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-field">
-                  <input type="tel" class="form-input" name="phone" id="userPhone" placeholder="Your Phone">
-                  <label for="userPhone" class="field-label">Phone</label>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-field message-field">
-              <textarea class="form-input message-input" name="message" id="userMessage" rows="5" placeholder="Describe your project or requirements here" required=""></textarea>
-              <label for="userMessage" class="field-label">Message</label>
-            </div>
-
-            <div class="my-3">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
-            </div>
-
-            <button type="submit" class="send-button">
-              Send Message
-              <span class="button-arrow">→</span>
-            </button>
-          </form>
+          <p class="mt-3">Feel free to reach out for project inquiries, collaborations, or freelance opportunities. I’m happy to discuss how we can work together.</p>
         </div>
-      </div><!-- End Contact Form -->
-
-      <!-- Contact Sidebar -->
-      <div class="col-lg-5 order-lg-2 order-1" data-aos="fade-left" data-aos-delay="300">
-        <div class="contact-sidebar">
-          <div class="contact-header">
-            <h3>Get in Touch</h3>
-            <p>Feel free to reach out for project inquiries, collaborations, or freelance opportunities. I’m happy to discuss how we can work together.</p>
-          </div>
-
-          <div class="contact-methods">
-            <div class="contact-method" data-aos="fade-in" data-aos-delay="400">
-              <div class="contact-icon">
-                <i class="bi bi-envelope"></i>
-              </div>
-              <div class="contact-details">
-                <span class="method-label">Email</span>
-                <p>kiruthickraj28@gmail.com</p>
-              </div>
-            </div>
-
-            <div class="contact-method" data-aos="fade-in" data-aos-delay="450">
-              <div class="contact-icon">
-                <i class="bi bi-telephone"></i>
-              </div>
-              <div class="contact-details">
-                <span class="method-label">Phone</span>
-                <p>+91 8124509134</p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div><!-- End Contact Sidebar -->
-
+      </div>
     </div>
   </div>
 </section>
@@ -1017,7 +957,6 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
