tech stack update

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="intro-center">
               <p class="eyebrow mb-2">Hi, I'm Kiruthickraj!</p>
 
-              <h1 class="display-heading mb-3">Wordpress & Backend Developer</h1>
+              <h1 class="display-heading mb-3">Wordpress & Full-stack Developer</h1>
 
               <div class="social-links hero-socials mb-4">
                 <a href="https://github.com/Kiruthickraj004" class="social-link"><i class="bi bi-github"></i></a>
