--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="intro-center">
               <p class="eyebrow mb-2">Hi, I'm Kiruthickraj!</p>
 
-              <h1 class="display-heading mb-3">Wordpress & Full-stack Developer</h1>
+              <h1 class="display-heading mb-3">Wordpress & Backend Developer</h1>
 
               <div class="social-links hero-socials mb-4">
                 <a href="https://github.com/Kiruthickraj004" class="social-link"><i class="bi bi-github"></i></a>
@@ -352,7 +352,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>A concise overview of my experience, skills, and education — tailored for backend and WordPress roles.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -515,157 +515,113 @@
   <!-- Portfolio Section -->
   <section id="portfolio" class="portfolio section lined-bg">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Portfolio</h2>
+    <p>Selected WordPress themes, custom plugins, and backend-driven web applications.</p>
+  </div>
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="isotope-layout" data-default-filter="*" data-layout="fitRows" data-sort="original-order">
+    <div class="isotope-layout" data-default-filter="*" data-layout="fitRows" data-sort="original-order">
 
-          <div class="portfolio-filters-wrapper" data-aos="fade-up" data-aos-delay="100">
-            <ul class="portfolio-filters isotope-filters">
-              <li data-filter="*" class="filter-active">All Projects</li>
-              <li data-filter=".filter-branding">Branding</li>
-              <li data-filter=".filter-web">Web Design</li>
-              <li data-filter=".filter-print">Print Design</li>
-              <li data-filter=".filter-motion">Motion</li>
-            </ul>
-          </div>
-
-          <div class="row gy-4 portfolio-grid isotope-container portfolio-grid-vertical" data-aos="fade-up" data-aos-delay="200">
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-card-vertical text-center p-4 mb-4">
-                <img src="assets/img/portfolio/portfolio-3.webp" alt="Brand Identity" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
-                <h3 class="mb-2">Brand Identity</h3>
-                <p class="project-desc mb-3">A complete corporate branding package including logo, color system, typography, and brand guidelines designed for clarity and consistency.</p>
-                <div class="project-tech mb-3">
-                  <span class="project-tag">Illustrator</span>
-                  <span class="project-tag">Branding</span>
-                  <span class="project-tag">Guidelines</span>
-                </div>
-                <div class="pt-2">
-                  <a href="https://github.com/Kiruthickraj004/brand-identity" class="btn btn-sm btn-dark" target="_blank" rel="noopener">View on GitHub</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
-              <div class="portfolio-card-vertical text-center p-4 mb-4">
-                <img src="assets/img/portfolio/portfolio-7.webp" alt="E-commerce Platform" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
-                <h3 class="mb-2">E-commerce Platform</h3>
-                <p class="project-desc mb-3">An accessible and responsive online store built with performance in mind — product listings, cart, and checkout flows optimized for conversion.</p>
-                <div class="project-tech mb-3">
-                  <span class="project-tag">HTML</span>
-                  <span class="project-tag">Bootstrap</span>
-                  <span class="project-tag">Stripe</span>
-                </div>
-                <div class="pt-2">
-                  <a href="https://github.com/Kiruthickraj004/ecommerce-demo" class="btn btn-sm btn-dark" target="_blank" rel="noopener">View on GitHub</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-print">
-              <div class="portfolio-card-vertical text-center p-4 mb-4">
-                <img src="assets/img/portfolio/portfolio-portrait-5.webp" alt="Magazine Design" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
-                <h3 class="mb-2">Magazine Design</h3>
-                <p class="project-desc mb-3">Editorial layout focusing on typographic hierarchy and grid systems to improve readability across print and digital formats.</p>
-                <div class="project-tech mb-3">
-                  <span class="project-tag">InDesign</span>
-                  <span class="project-tag">Editorial</span>
-                </div>
-                <div class="pt-2">
-                  <a href="https://github.com/Kiruthickraj004/magazine-design" class="btn btn-sm btn-dark" target="_blank" rel="noopener">View on GitHub</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-motion">
-              <div class="portfolio-card-vertical text-center p-4 mb-4">
-                <img src="assets/img/portfolio/portfolio-8.webp" alt="Motion Graphics" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
-                <h3 class="mb-2">Motion Graphics</h3>
-                <p class="project-desc mb-3">Short-form brand animations and explainer sequences designed to increase engagement on social platforms.</p>
-                <div class="project-tech mb-3">
-                  <span class="project-tag">After Effects</span>
-                  <span class="project-tag">Animation</span>
-                </div>
-                <div class="pt-2">
-                  <a href="https://github.com/Kiruthickraj004/motion-graphics" class="btn btn-sm btn-dark" target="_blank" rel="noopener">View on GitHub</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-card-vertical text-center p-4 mb-4">
-                <img src="assets/img/portfolio/portfolio-9.webp" alt="Logo Collection" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
-                <h3 class="mb-2">Logo Collection</h3>
-                <p class="project-desc mb-3">A set of logo concepts exploring versatile mark systems suitable for startups and product brands.</p>
-                <div class="project-tech mb-3">
-                  <span class="project-tag">Sketch</span>
-                  <span class="project-tag">Branding</span>
-                </div>
-                <div class="pt-2">
-                  <a href="https://github.com/Kiruthickraj004/logo-collection" class="btn btn-sm btn-dark" target="_blank" rel="noopener">View on GitHub</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
-              <div class="portfolio-card-vertical text-center p-4 mb-4">
-                <img src="assets/img/portfolio/portfolio-portrait-8.webp" alt="Mobile App Design" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
-                <h3 class="mb-2">Mobile App Design</h3>
-                <p class="project-desc mb-3">A user-centered prototype for a productivity mobile app featuring intuitive navigation and accessible controls.</p>
-                <div class="project-tech mb-3">
-                  <span class="project-tag">Figma</span>
-                  <span class="project-tag">iOS</span>
-                  <span class="project-tag">Prototype</span>
-                </div>
-                <div class="pt-2">
-                  <a href="https://github.com/Kiruthickraj004/mobile-app-design" class="btn btn-sm btn-dark" target="_blank" rel="noopener">View on GitHub</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-print">
-              <div class="portfolio-card-vertical text-center p-4 mb-4">
-                <img src="assets/img/portfolio/portfolio-10.webp" alt="Packaging Design" class="img-fluid rounded border shadow-sm w-100 mb-3" style="height:180px;object-fit:cover;">
-                <h3 class="mb-2">Packaging Design</h3>
-                <p class="project-desc mb-3">Sustainable product packaging concept focusing on lightweight materials and simple assembly to lower environmental impact.</p>
-                <div class="project-tech mb-3">
-                  <span class="project-tag">Packaging</span>
-                  <span class="project-tag">Sustainability</span>
-                </div>
-                <div class="pt-2">
-                  <a href="https://github.com/Kiruthickraj004/packaging-design" class="btn btn-sm btn-dark" target="_blank" rel="noopener">View on GitHub</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-motion">
-              <div class="portfolio-card-vertical text-center p-4 mb-4">
-                <img src="assets/img/portfolio/portfolio-11.webp" alt="Brand Animation" class="img-fluid rounded border shadow-sm w-100 mb-3" style="height:180px;object-fit:cover;">
-                <h3 class="mb-2">Brand Animation</h3>
-                <p class="project-desc mb-3">Dynamic identity animations and logo treatments that bring brands to life across motion and interactive media.</p>
-                <div class="project-tech mb-3">
-                  <span class="project-tag">Motion</span>
-                  <span class="project-tag">Branding</span>
-                </div>
-                <div class="pt-2">
-                  <a href="https://github.com/Kiruthickraj004/brand-animation" class="btn btn-sm btn-dark" target="_blank" rel="noopener">View on GitHub</a>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Portfolio Grid -->
-
-        </div>
-
+      <!-- Filters -->
+      <div class="portfolio-filters-wrapper" data-aos="fade-up" data-aos-delay="100">
+        <ul class="portfolio-filters isotope-filters">
+          <li data-filter="*" class="filter-active">All Projects</li>
+          <li data-filter=".filter-wp-theme">WordPress Themes</li>
+          <li data-filter=".filter-wp-plugin">WordPress Plugins</li>
+        </ul>
       </div>
 
-    </section><!-- /Portfolio Section -->
+      <!-- Portfolio Grid -->
+      <div class="row gy-4 portfolio-grid isotope-container portfolio-grid-vertical" data-aos="fade-up" data-aos-delay="200">
+
+        <!-- Clothiq WordPress Theme -->
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-wp-theme">
+          <div class="portfolio-card-vertical text-center p-4 mb-4">
+            <img src="assets/img/wordpress-logo.png" alt="Clothiq WordPress Theme" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
+            <h3 class="mb-2">Clothiq – Fashion E-commerce Theme</h3>
+            <p class="project-desc mb-3">
+              A custom WordPress theme built for fashion e-commerce brands, featuring product size availability,
+              color swatches and a bulk price management system.
+            </p>
+            <div class="project-tech mb-3">
+              <span class="project-tag">WordPress</span>
+              <span class="project-tag">WooCommerce</span>
+              <span class="project-tag">Custom Theme</span>
+            </div>
+            <div class="pt-2">
+              <a href="https://github.com/Kiruthickraj004/clothiq" class="btn btn-sm btn-dark">Github</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Bulk Price Updater Plugin -->
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-wp-plugin">
+          <div class="portfolio-card-vertical text-center p-4 mb-4">
+            <img src="assets/img/woocommerce-logo.png" alt="Bulk Price Updater Plugin" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
+            <h3 class="mb-2">Bulk Price Updater</h3>
+            <p class="project-desc mb-3">
+              A WooCommerce plugin that updates product prices in bulk using parent category, sub-category,
+              color and size attributes.
+            </p>
+            <div class="project-tech mb-3">
+              <span class="project-tag">WooCommerce</span>
+              <span class="project-tag">Custom Plugin</span>
+              <span class="project-tag">Pricing Engine</span>
+            </div>
+            <div class="pt-2">
+              <a href="https://github.com/Kiruthickraj004/bulk-price-updater" class="btn btn-sm btn-dark">Github</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Size & Color Manager Plugin -->
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-wp-plugin">
+          <div class="portfolio-card-vertical text-center p-4 mb-4">
+            <img src="assets/img/woocommerce-logo.png" alt="Size & Color Manager" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
+            <h3 class="mb-2">Size Availability & Colors</h3>
+            <p class="project-desc mb-3">
+              Allows admins to define product sizes and assign multiple colors while creating or updating WooCommerce products.
+            </p>
+            <div class="project-tech mb-3">
+              <span class="project-tag">WooCommerce</span>
+              <span class="project-tag">Attributes</span>
+              <span class="project-tag">Custom Plugin</span>
+            </div>
+            <div class="pt-2">
+              <a href="https://github.com/Kiruthickraj004/size-and-color-availability" class="btn btn-sm btn-dark">Github</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Color Swatches Plugin -->
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-wp-plugin">
+          <div class="portfolio-card-vertical text-center p-4 mb-4">
+            <img src="assets/img/woocommerce-logo.png" alt="Color Swatches Plugin" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
+            <h3 class="mb-2">Color Swatches</h3>
+            <p class="project-desc mb-3">
+              Front-end WooCommerce plugin that allows customers to switch between available colors and preview variations visually.
+            </p>
+            <div class="project-tech mb-3">
+              <span class="project-tag">WooCommerce</span>
+              <span class="project-tag">UX Enhancement</span>
+              <span class="project-tag">Custom Plugin</span>
+            </div>
+            <div class="pt-2">
+              <a href="https://github.com/Kiruthickraj004/color-swatches" class="btn btn-sm btn-dark">Github</a>
+            </div>
+          </div>
+        </div>
+
+
+      </div><!-- End Portfolio Grid -->
+
+    </div>
+  </div>
+</section>
+<!-- /Portfolio Section -->
 
     <!-- Testimonials Section -->
     <!-- <section id="testimonials" class="testimonials section light-background">
