laravel project updated

--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@
           <li data-filter="*" class="filter-active">All Projects</li>
           <li data-filter=".filter-wp-theme">WordPress Themes</li>
           <li data-filter=".filter-wp-plugin">WordPress Plugins</li>
+          <li data-filter=".filter-laravel">Laravel</li>
         </ul>
       </div>
 
@@ -615,6 +616,24 @@
           </div>
         </div>
 
+        <!-- Laravel -->
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-laravel">
+          <div class="portfolio-card-vertical text-center p-4 mb-4">
+            <img src="assets/img/laravel.png" alt="Color Swatches Plugin" class="img-fluid rounded border shadow-sm w-100 mb-3" style="min-height:180px;object-fit:cover;">
+            <h3 class="mb-2">Headless CMS</h3>
+            <p class="project-desc mb-3">
+             Developed a multi-tenant Headless CMS with an admin dashboard and REST APIs, enabling frontend apps to fetch dynamic content using project-based API keys.
+            </p>
+            <div class="project-tech mb-3">
+              <span class="project-tag">Laravel</span>
+              <span class="project-tag">PHP</span>
+              <span class="project-tag">CMS</span>
+            </div>
+            <div class="pt-2">
+              <a href="https://github.com/Kiruthickraj004/headless-cms" class="btn btn-sm btn-dark">Github</a>
+            </div>
+          </div>
+        </div>
 
       </div><!-- End Portfolio Grid -->
 
