--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <span class="eyebrow">Hello there</span>
               <h2 class="headline">Hi, I’m Kiruthickraj — a thoughtful developer shaping digital experiences with clarity and intent.</h2>
               <p class="lead">
-                I’m a backend-focused developer specializing in WordPress and Laravel, with a strong foundation in PHP. Currently expanding my expertise into Node.js and Golang to build scalable, high-performance web applications.
+                I’m a backend-focused developer specializing in WordPress and Laravel, with a strong foundation in PHP. Currently expanding my expertise into Node.js to build scalable, high-performance web applications.
               </p>
 
               <div class="cta-group">
