--- a/index.html
+++ b/index.html
@@ -643,6 +643,7 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/github-config.js"></script>
   <script src="assets/js/github.js"></script>
 </body>
 </html>
